feat: start 2 part

--- a/sass/layouts/_contacts.scss
+++ b/sass/layouts/_contacts.scss
@@ -13,6 +13,7 @@
 
 // }
 .contacts__title {
+    font-family: 'Inika', Verdana, sans-serif;
     text-align: center;
     @include font (normal, 700, 40px, 52px);
     margin-bottom: 37px;
