--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -6,5 +6,17 @@ line-height: $height;
 color: $color;
 }
 
+@mixin media-laptop {
+    @media (max-width: $content-width) { @content; }
+}
+
+@mixin media-tablet {
+    @media (max-width: $tablet-width) { @content; }
+}
+
+@mixin media-mobile {
+    @media (max-width: $mobile-width) {@content; }
+}
+
  
 
