--- a/sass/layouts/_promo.scss
+++ b/sass/layouts/_promo.scss
@@ -1,29 +1,50 @@
 .promo {
-padding: 62.5px 0;
+    padding: 62.5px 0;
+    @include media-tablet {
+        padding: 40px 0 70px;
+    }
 }
 
 .promo__wrapper {
-display: flex;
-flex-direction: row-reverse;
-// align-items: center;
-justify-content: space-between;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
 
+    @include media-tablet {
+        flex-direction: row;
+    }
 }
 
 .background__leafs {
     background-color: $color-background;
     max-height: 407px;
+    @include media-tablet {
+        max-height: 254px; 
+    }
 }
 
 .promo__content {
     padding: 36px 0 0 224px;
+    @include media-tablet {
+        padding: 0;
+    }
 }
 
 .promo__title {
     margin-bottom: 42px;
+    @include media-tablet {
+        padding: 0;
+        font-family: 'Inter';
+        @include font ( normal, 700, 35px,  50px, $color-text7);
+        margin-bottom: 30px;
+    }
 }
+
 .promo__text {
-    margin-bottom: 48px; 
+    margin-bottom: 48px;
+    @include media-tablet {
+        font-family: 'Inter';
+        @include font (normal, 400, 16px,25px, $color-text6);
+        margin-bottom: 30px;
+    }
 }
-
-
