feat: adaptive part of the site

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,6 +7,9 @@ html {
   body {
     font-size: 2rem;
     font-family: 'Inter', Verdana, sans-serif;
+
+    // overflow: hidden;
+
   }
   
   li {
