--- a/sass/base/_logo.scss
+++ b/sass/base/_logo.scss
@@ -1,6 +1,9 @@
 .logo {
-    color: $color-dark;
-    @include font(normal, 400, 16px, 21px);
+    display: flex;
+    align-items: flex-end;
+   max-height: 21px; 
+    // color: $color-dark;
+    // @include font(normal, 400, 16px, 21px);
     // max-width: 79px;
     // max-height: 21px;
 }
@@ -8,4 +11,13 @@
 .logo__img {
     margin-right: 1px;
     width: 20px;
+  align-self: flex-start;
+}
+
+.logo__text {
+    color: $color-dark;
+    @include font(normal, 400, 16px, 21px);
+    // text-align: end;
+    // justify-self: flex-end;
+    // align-self: flex-end;
 }
