--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,6 +1,6 @@
 .button {
     width: 161px;
-   height: 50px;
+    height: 50px;
     border-radius: 5px;
     border: 1px solid $color-brand;
     color: $color-brand;
@@ -11,16 +11,27 @@
     }
 
     transition: all .3s;
+
+    @include media-mobile {
+        @include font (normal, 400, 15px, 20px);
+        width: 121px;
+        height: 35px;
+    }
 }
 
 .button_learnMore {
     width: 158px;
-   height: 44px;
+    height: 44px;
     color: $color-dark;
     border-radius: 10px;
     border: 2px solid $color-brand;
     font-family: 'Inter';
     @include font (normal, 400, 16px, 20px);
-   padding: auto;
+    padding: auto;
 
+    @include media-mobile {
+        width: 100px;
+        height: 34px;
+        @include font (normal, 400, 10px, 20px);
+    }
 }
