--- a/sass/layouts/_prices.scss
+++ b/sass/layouts/_prices.scss
@@ -1,22 +1,52 @@
 .prices {
     padding: 40px 0 115px;
     background-color: $color-light;
+
+    @include media-tablet {
+        padding: 40px 0 88px;
+    }
+    @include media-mobile {
+        padding: 25px 0 40px;
+    }
 }
 
 .wrapper__prices {
     display: flex;
     justify-content: space-between;
+    @include media-mobile {
+        flex-direction: column;
+    }
 }
 
-// .prices__tariffs {
-// }
+.prices__tariffs {
+    @include media-mobile {
+        padding: 0 53px;
+    }
+}
 .tariffs-title {
     @include font (normal, 700, 4rem, 4.8rem);
     margin-bottom: 60px;
+
+    @include media-tablet {
+        @include font (normal, 700, 3.5rem, 4.2rem);
+        margin-bottom: 57px;
+    }
+    @include media-mobile {
+        text-align: center;
+        margin-bottom: 40px;
+        @include font (normal, 700, 25px, 30px, #000000);
+    }
 }
 
-// .tariffs {
-// }
+.tariffs {
+    border: 1px solid #E3E1D5;
+    border-radius: 20px;
+    padding: 34px 40px 0;
+    @include media-mobile {
+        padding: 29px 22px;
+    }
+}
+
 .tariff__container {
     background: #EDF2EC;
     margin-bottom: 32px;
@@ -26,6 +56,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include media-mobile {
+        width: 100%;
+        padding: 16px 30px;
+        margin-bottom: 14px;
+        &:last-child {
+            margin-bottom: 0; 
+        }
+    }
 
     &:hover {
         background: #D6E7D2;
@@ -44,6 +82,9 @@
 
 .tariff__text {
     @include font (normal, 700, 2rem, 2rem);
+    @include media-mobile {
+        @include font (normal, 700, 15px, 20px)
+    }
 }
 
 // .tariff2 {
@@ -69,14 +110,57 @@
 
 .help {
     text-align: right;
+
+    @include media-tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        padding: 99px 0 0 40px;
+    }
+    @include media-mobile {
+        padding: 19px 0 0 0; 
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .help__title {
     @include font (normal, 700, 4rem, 5rem);
-    max-width: 452px;
+    max-width: 460px;
     margin-bottom: 38px;
+
+    @include media-tablet {
+        @include font (normal, 700, 2.2rem, 3.5rem);
+        margin-bottom: 30px;
+    }
+
+    @include media-mobile {
+        text-align: center;
+        margin-bottom: 14px;
+        @include font (normal, 700, 20px, 35px);
+    }
+}
+
+.prices__img {
+        width: 152px;
+        height: 175px;
+   @include media-mobile {
+    display: none;
+   }
 }
 
 .button__prices {
     margin-bottom: 39px;
+
+    @include media-tablet {
+        margin-bottom: 34px;
+    }
+    @include media-mobile {
+        margin-bottom: 0; 
+        font-weight: 700;
+        background: $color-light;
+        padding: 8px 22px;
+     font-family: "Inika", sans-serif;
+    }
+
 }
