--- a/sass/layouts/_service.scss
+++ b/sass/layouts/_service.scss
@@ -1,20 +1,45 @@
 .projects {
     padding: 40px 0 121px;
+
+    @include media-tablet {
+        padding: 60px 0 70px;
+    }
+
+    @include media-mobile {
+        padding: 30px 0 27px;
+    }
 }
 
 .projects__title {
     display: flex;
     margin-bottom: 90px;
-    font-family: 'Inika', verdana, sans-serif;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 52px;
+
+    @include media-tablet {
+        flex-direction: column;
+        margin-bottom: 40px;
+    }
 }
 
 .project__subtitle {
-    // display: inline-flex;
     max-width: 306px;
     margin-right: 142px;
+    font-family: 'Inika', verdana, sans-serif;
+    font-weight: 400;
+    font-size: 4rem;
+    line-height: 5.2rem;
+
+
+    @include media-tablet {
+        margin-bottom: 42px;
+        margin-right: 0;
+        line-height: 46px;
+    }
+
+    @include media-mobile {
+        @include font (normal, 400, 2.5rem, 3.3rem);
+        margin-bottom: 35px;
+
+    }
 }
 
 .title__buttons {
@@ -23,13 +48,26 @@
     justify-content: space-around;
     align-items: center;
 
+    @include media-tablet {
+        justify-content: flex-start;
+    }
+
+    @include media-mobile {
+        flex-wrap: wrap;
+        gap: 9px;
+        justify-content: flex-start;
+    }
+
     .button_borded {
         margin-right: 38px;
         font-family: 'Inika';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 26px;
+        @include font (normal, 400, 20px, 26px);
+
+        @include media-mobile {
+            margin: 0;
+            @include font (normal, 400, 15px, 20px);
+            text-align: center;
+        }
     }
 }
 
@@ -38,6 +76,18 @@
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 116px;
     grid-row-gap: 55px;
+
+    @include media-tablet {
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 106px;
+        grid-row-gap: 38px;
+    }
+    @include media-mobile {
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 0;
+        grid-row-gap: 34px;
+        padding: 0 25px;
+    }
 }
 
 
@@ -48,7 +98,10 @@
 }
 
 // .project__img {
-//     max-height: 350px;
+//     @include media-tablet {
+//         max-width: 280px;
+//         max-height: 350px; 
+//     }
 // }
 
 .project__title {
@@ -59,6 +112,10 @@
 .project__discription {
     padding: 10px 0 36px;
     text-align: center;
+
+    @include media-tablet {
+        padding: 4px 39px 20px;
+    }
 }
 
 .project__text {
