--- a/sass/style.css
+++ b/sass/style.css
@@ -438,17 +438,24 @@ p {
 }
 
 .logo {
+  display: flex;
+  align-items: flex-end;
+  max-height: 21px;
+}
+
+.logo__img {
+  margin-right: 1px;
+  width: 20px;
+  align-self: flex-start;
+}
+
+.logo__text {
   color: #000000;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
   color: "#000000";
-}
-
-.logo__img {
-  margin-right: 1px;
-  width: 20px;
 }
 
 .wrapper {
@@ -535,6 +542,17 @@ p {
   background-color: #E06733;
   color: #ffffff;
 }
+@media (max-width: 380px) {
+  .button {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: "#000000";
+    width: 121px;
+    height: 35px;
+  }
+}
 
 .button_learnMore {
   width: 158px;
@@ -549,6 +567,17 @@ p {
   line-height: 20px;
   color: "#000000";
   padding: auto;
+}
+@media (max-width: 380px) {
+  .button_learnMore {
+    width: 100px;
+    height: 34px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 20px;
+    color: "#000000";
+  }
 }
 
 .header {
@@ -574,6 +603,11 @@ p {
     padding: 40px 0 70px;
   }
 }
+@media (max-width: 380px) {
+  .promo {
+    padding: 24px 0;
+  }
+}
 
 .promo__wrapper {
   display: flex;
@@ -595,6 +629,11 @@ p {
     max-height: 254px;
   }
 }
+@media (max-width: 380px) {
+  .background__leafs {
+    display: none;
+  }
+}
 
 .promo__content {
   padding: 36px 0 0 224px;
@@ -602,6 +641,7 @@ p {
 @media (max-width: 768px) {
   .promo__content {
     padding: 0;
+    max-width: 346px;
   }
 }
 
@@ -620,6 +660,15 @@ p {
     margin-bottom: 30px;
   }
 }
+@media (max-width: 380px) {
+  .promo__title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 35px;
+    color: "#000000";
+  }
+}
 
 .promo__text {
   margin-bottom: 48px;
@@ -630,9 +679,18 @@ p {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 25px;
+    line-height: 26px;
     color: #636060;
     margin-bottom: 30px;
+  }
+}
+@media (max-width: 380px) {
+  .promo__text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    color: "#000000";
   }
 }
 
@@ -640,48 +698,161 @@ p {
   padding: 94px 0;
   background-color: #ffffff;
 }
+@media (max-width: 768px) {
+  .about {
+    padding: 40px 0 95px;
+  }
+}
+@media (max-width: 380px) {
+  .about {
+    padding: 20px 0 21px;
+  }
+}
 
 .about__wrapper {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 768px) {
+  .about__wrapper {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 
 .about__content {
+  display: flex;
+  flex-direction: column;
   max-width: 42.1vw;
   padding-top: 67px;
+}
+@media (max-width: 768px) {
+  .about__content {
+    max-width: 100%;
+    padding-top: 0;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 65px;
+  }
+}
+@media (max-width: 380px) {
+  .about__content {
+    margin-bottom: 0;
+  }
 }
 
 .about__title {
   margin-bottom: 40px;
   max-width: 463px;
 }
+@media (max-width: 768px) {
+  .about__title {
+    max-width: 423px;
+    text-align: center;
+  }
+}
+@media (max-width: 380px) {
+  .about__title {
+    margin-bottom: 12px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.5rem;
+    line-height: 3.3rem;
+    color: "#000000";
+  }
+}
+
+.about__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  color: "#000000";
+}
 
 .about__img {
   width: 464px;
+}
+@media (max-width: 768px) {
+  .about__img {
+    width: 250px;
+    align-self: center;
+  }
+}
+@media (max-width: 380px) {
+  .about__img {
+    max-width: 150px;
+    max-height: 147px;
+  }
 }
 
 .projects {
   padding: 40px 0 121px;
 }
+@media (max-width: 768px) {
+  .projects {
+    padding: 60px 0 70px;
+  }
+}
+@media (max-width: 380px) {
+  .projects {
+    padding: 30px 0 27px;
+  }
+}
 
 .projects__title {
   display: flex;
   margin-bottom: 90px;
-  font-family: "Inika", verdana, sans-serif;
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 52px;
+}
+@media (max-width: 768px) {
+  .projects__title {
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
 }
 
 .project__subtitle {
   max-width: 306px;
   margin-right: 142px;
+  font-family: "Inika", verdana, sans-serif;
+  font-weight: 400;
+  font-size: 4rem;
+  line-height: 5.2rem;
+}
+@media (max-width: 768px) {
+  .project__subtitle {
+    margin-bottom: 42px;
+    margin-right: 0;
+    line-height: 46px;
+  }
+}
+@media (max-width: 380px) {
+  .project__subtitle {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.5rem;
+    line-height: 3.3rem;
+    color: "#000000";
+    margin-bottom: 35px;
+  }
 }
 
 .title__buttons {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+@media (max-width: 768px) {
+  .title__buttons {
+    justify-content: flex-start;
+  }
+}
+@media (max-width: 380px) {
+  .title__buttons {
+    flex-wrap: wrap;
+    gap: 9px;
+    justify-content: flex-start;
+  }
 }
 .title__buttons .button_borded {
   margin-right: 38px;
@@ -690,6 +861,18 @@ p {
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
+  color: "#000000";
+}
+@media (max-width: 380px) {
+  .title__buttons .button_borded {
+    margin: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: "#000000";
+    text-align: center;
+  }
 }
 
 .layout-3-column {
@@ -697,6 +880,21 @@ p {
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 116px;
   grid-row-gap: 55px;
+}
+@media (max-width: 768px) {
+  .layout-3-column {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 106px;
+    grid-row-gap: 38px;
+  }
+}
+@media (max-width: 380px) {
+  .layout-3-column {
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 0;
+    grid-row-gap: 34px;
+    padding: 0 25px;
+  }
 }
 
 .project {
@@ -718,6 +916,11 @@ p {
   padding: 10px 0 36px;
   text-align: center;
 }
+@media (max-width: 768px) {
+  .project__discription {
+    padding: 4px 39px 20px;
+  }
+}
 
 .project__text {
   font-style: normal;
@@ -731,10 +934,31 @@ p {
   padding: 40px 0 115px;
   background-color: #ffffff;
 }
+@media (max-width: 768px) {
+  .prices {
+    padding: 40px 0 88px;
+  }
+}
+@media (max-width: 380px) {
+  .prices {
+    padding: 25px 0 40px;
+  }
+}
 
 .wrapper__prices {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 380px) {
+  .wrapper__prices {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 380px) {
+  .prices__tariffs {
+    padding: 0 53px;
+  }
 }
 
 .tariffs-title {
@@ -744,6 +968,38 @@ p {
   line-height: 4.8rem;
   color: "#000000";
   margin-bottom: 60px;
+}
+@media (max-width: 768px) {
+  .tariffs-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3.5rem;
+    line-height: 4.2rem;
+    color: "#000000";
+    margin-bottom: 57px;
+  }
+}
+@media (max-width: 380px) {
+  .tariffs-title {
+    text-align: center;
+    margin-bottom: 40px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    color: #000000;
+  }
+}
+
+.tariffs {
+  border: 1px solid #E3E1D5;
+  border-radius: 20px;
+  padding: 34px 40px 0;
+}
+@media (max-width: 380px) {
+  .tariffs {
+    padding: 29px 22px;
+  }
 }
 
 .tariff__container {
@@ -755,6 +1011,16 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media (max-width: 380px) {
+  .tariff__container {
+    width: 100%;
+    padding: 16px 30px;
+    margin-bottom: 14px;
+  }
+  .tariff__container:last-child {
+    margin-bottom: 0;
+  }
 }
 .tariff__container:hover {
   background: #D6E7D2;
@@ -776,9 +1042,33 @@ p {
   line-height: 2rem;
   color: "#000000";
 }
+@media (max-width: 380px) {
+  .tariff__text {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+    color: "#000000";
+  }
+}
 
 .help {
   text-align: right;
+}
+@media (max-width: 768px) {
+  .help {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 99px 0 0 40px;
+  }
+}
+@media (max-width: 380px) {
+  .help {
+    padding: 19px 0 0 0;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .help__title {
@@ -787,22 +1077,79 @@ p {
   font-size: 4rem;
   line-height: 5rem;
   color: "#000000";
-  max-width: 452px;
+  max-width: 460px;
   margin-bottom: 38px;
+}
+@media (max-width: 768px) {
+  .help__title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.2rem;
+    line-height: 3.5rem;
+    color: "#000000";
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 380px) {
+  .help__title {
+    text-align: center;
+    margin-bottom: 14px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 35px;
+    color: "#000000";
+  }
+}
+
+.prices__img {
+  width: 152px;
+  height: 175px;
+}
+@media (max-width: 380px) {
+  .prices__img {
+    display: none;
+  }
 }
 
 .button__prices {
   margin-bottom: 39px;
+}
+@media (max-width: 768px) {
+  .button__prices {
+    margin-bottom: 34px;
+  }
+}
+@media (max-width: 380px) {
+  .button__prices {
+    margin-bottom: 0;
+    font-weight: 700;
+    background: #ffffff;
+    padding: 8px 22px;
+    font-family: "Inika", sans-serif;
+  }
 }
 
 .Contact-us {
   padding-top: 60px;
   max-height: 550px;
 }
+@media (max-width: 768px) {
+  .Contact-us {
+    padding-top: 40px;
+    max-height: 100%;
+  }
+}
 
 .wrapper__contacts {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .wrapper__contacts {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 }
 
 .contacts__title {
@@ -815,10 +1162,21 @@ p {
   color: "#000000";
   margin-bottom: 37px;
 }
+@media (max-width: 768px) {
+  .contacts__title {
+    margin-bottom: 100px;
+  }
+}
 
 .contacts__img {
   position: relative;
   bottom: 95px;
+}
+@media (max-width: 768px) {
+  .contacts__img {
+    width: 200px;
+    position: static;
+  }
 }
 
 .form__select {
@@ -831,6 +1189,11 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media (max-width: 768px) {
+  .form__select {
+    margin-bottom: 250px;
+  }
 }
 .form__select:hover {
   background: #C1E698;
