--- a/sass/style.css
+++ b/sass/style.css
@@ -495,6 +495,8 @@ p {
 
 .nav {
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 @media (max-width: 380px) {
   .nav {
@@ -622,11 +624,11 @@ p {
 
 .background__leafs {
   background-color: #EDF2EC;
-  max-height: 407px;
+  max-height: 28.3vw;
 }
 @media (max-width: 768px) {
   .background__leafs {
-    max-height: 254px;
+    max-height: 33vw;
   }
 }
 @media (max-width: 380px) {
@@ -803,6 +805,7 @@ p {
 .projects__title {
   display: flex;
   margin-bottom: 90px;
+  flex-wrap: wrap;
 }
 @media (max-width: 768px) {
   .projects__title {
@@ -841,6 +844,7 @@ p {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 @media (max-width: 768px) {
   .title__buttons {
@@ -948,6 +952,7 @@ p {
 .wrapper__prices {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 @media (max-width: 380px) {
   .wrapper__prices {
@@ -1103,8 +1108,8 @@ p {
 }
 
 .prices__img {
-  width: 152px;
-  height: 175px;
+  max-width: 152px;
+  max-height: 175px;
 }
 @media (max-width: 380px) {
   .prices__img {
@@ -1140,6 +1145,11 @@ p {
     max-height: 100%;
   }
 }
+@media (max-width: 380px) {
+  .Contact-us {
+    padding: 25px 15px 0;
+  }
+}
 
 .wrapper__contacts {
   display: flex;
@@ -1149,6 +1159,12 @@ p {
   .wrapper__contacts {
     flex-direction: column-reverse;
     align-items: center;
+    padding: 0 109px;
+  }
+}
+@media (max-width: 380px) {
+  .wrapper__contacts {
+    padding: 0;
   }
 }
 
@@ -1167,6 +1183,16 @@ p {
     margin-bottom: 100px;
   }
 }
+@media (max-width: 380px) {
+  .contacts__title {
+    margin-bottom: 80px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.5rem;
+    line-height: 3.3rem;
+    color: "#000000";
+  }
+}
 
 .contacts__img {
   position: relative;
@@ -1176,6 +1202,11 @@ p {
   .contacts__img {
     width: 200px;
     position: static;
+  }
+}
+@media (max-width: 380px) {
+  .contacts__img {
+    width: 100px;
   }
 }
 
@@ -1193,6 +1224,13 @@ p {
 @media (max-width: 768px) {
   .form__select {
     margin-bottom: 250px;
+    width: 100%;
+  }
+}
+@media (max-width: 380px) {
+  .form__select {
+    width: 100%;
+    margin-bottom: 132px;
   }
 }
 .form__select:hover {
@@ -1221,6 +1259,11 @@ p {
   background-color: #ffffff;
   padding: 40px 0;
 }
+@media (max-width: 768px) {
+  .footer {
+    padding: 33px 0 18px;
+  }
+}
 
 .footer__content {
   display: flex;
@@ -1229,6 +1272,18 @@ p {
 }
 .footer__content a {
   color: #000000;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: "#000000";
+}
+@media (max-width: 768px) {
+  .footer__content {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 16px;
+  }
 }
 
 .network {
@@ -1239,8 +1294,21 @@ p {
   line-height: 5rem;
   color: "#000000";
 }
+@media (max-width: 768px) {
+  .network {
+    padding: 0;
+  }
+}
 .network li {
   margin-left: 20px;
+}
+@media (max-width: 768px) {
+  .network li {
+    margin-left: 23px;
+  }
+  .network li:first-child {
+    margin-left: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
