--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,5 +20,7 @@
 @import "layouts/service";
 @import "layouts/prices";
 @import "layouts/contacts";
-@import "layouts/footer"
+@import "layouts/footer";
 
+
+@import "components/burger-menu";
