--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,6 +4,7 @@
     border-radius: 5px;
     border: 1px solid $color-brand;
     color: $color-brand;
+    @extend %transition;
 
     &:hover {
         background-color: $color-brand;
