feat: add drop-down list in section prise

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,7 +15,7 @@ html {
   li {
     list-style: none; 
   }
-
+  
   a {
     text-decoration: none;
   }
@@ -45,3 +45,6 @@ html {
   color: $color-brand;
 }
 
+.none {
+  display:none;
+}
