--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color: $color-light;
-    padding: 40px 0;
+    padding: 40px 0 100px;
 
     @include media-tablet {
         padding: 33px 0 18px;
