--- a/sass/layouts/_service.scss
+++ b/sass/layouts/_service.scss
@@ -99,6 +99,7 @@
     border: 1px solid #E3E1D5;
     border-radius: 20px;
     overflow: hidden;
+    @extend %transition;
 }
 
 // .project__img {
