--- a/sass/style.css
+++ b/sass/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-.button, .nav__link a {
-  transition: all 0.3s ease-out;
+.blur, .project, .button_active, .button:hover, .button, .nav__link a {
+  transition: all 0.7s ease-out;
 }
 
 .about__title, .header-wrapper {
@@ -437,6 +437,10 @@ p {
   color: #E06733;
 }
 
+.none {
+  display: none;
+}
+
 .logo {
   display: flex;
   align-items: flex-end;
@@ -558,7 +562,6 @@ p {
   border-radius: 5px;
   border: 1px solid #E06733;
   color: #E06733;
-  transition: all 0.3s;
 }
 .button:hover {
   background-color: #E06733;
@@ -1043,7 +1046,8 @@ p {
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
 @media (max-width: 380px) {
   .tariff__container {
@@ -1059,6 +1063,72 @@ p {
   background: #D6E7D2;
 }
 
+.tarif__title {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.active__prise {
+  display: none;
+  display: flex;
+  background: #D6E7D2;
+}
+
+.active__line {
+  padding-bottom: 12px;
+  border-bottom: solid 0.5px #AEA1A1;
+  width: 100%;
+}
+
+.active__part2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.activ__text {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 10px;
+  color: #717171;
+  padding: 6px 0 2px;
+}
+
+.activ__cost {
+  padding-bottom: 10px;
+}
+
+.cost__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #E06733;
+}
+
+.cost__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.button__cost {
+  background: #ffffff;
+  border-radius: 10px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: #717171;
+  border: none;
+  padding: 3px 20px;
+  width: 86px;
+}
+
 .tariff {
   width: 16px;
   height: 16px;
@@ -1066,6 +1136,11 @@ p {
   background: #D9D9D9;
   border-radius: 50%;
   text-align: center;
+  background: url("../../img/prices/buttonPriseBottom.svg");
+}
+
+.active_tariff {
+  background: url("../../img/prices/buttonPriseUp.svg");
 }
 
 .tariff__text {
@@ -1288,7 +1363,7 @@ p {
 
 .footer {
   background-color: #ffffff;
-  padding: 40px 0;
+  padding: 40px 0 100px;
 }
 @media (max-width: 768px) {
   .footer {
