feat: add functions

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -45,6 +45,14 @@ html {
   color: $color-brand;
 }
 
-.none {
+.none-prise {
   display:none;
+}
+
+.none-contacts {
+  display:none;
+}
+
+.none-cards {
+  display: none;
 }
