--- a/sass/layouts/_contacts.scss
+++ b/sass/layouts/_contacts.scss
@@ -1,10 +1,12 @@
 .Contact-us {
     padding-top: 60px;
     max-height: 550px;
+
     @include media-tablet {
         padding-top: 40px;
         max-height: 100%;
     }
+
     @include media-mobile {
         padding: 25px 15px 0;
     }
@@ -19,6 +21,7 @@
         align-items: center;
         padding: 0 109px;
     }
+
     @include media-mobile {
         padding: 0;
     }
@@ -32,9 +35,11 @@
     text-align: center;
     @include font (normal, 700, 40px, 52px);
     margin-bottom: 37px;
+
     @include media-tablet {
         margin-bottom: 100px;
     }
+
     @include media-mobile {
         margin-bottom: 80px;
         @include font (normal, 700, 2.5rem, 3.3rem)
@@ -49,26 +54,68 @@
         width: 200px;
         position: static;
     }
+
     @include media-mobile {
-        width: 100px; 
+        width: 100px;
     }
 }
 
+//-----SELECT----------------------------------
 .form__select {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    align-items: center;
-    background: #D6E7D2;
+    display: flex;
+    flex-direction: column;
+}
+
+// .contacts__select {
+//     padding: 5px 17.5px 5px 20px;
+//     border: none;
+//     border-color: inherit;
+//     background: inherit;
+//     // appearance: none;
+//     // -webkit-appearance: none;
+//     color: $color-text7;
+//     width: 100%;
+//     outline: none;
+
+//     &:hover {
+//         background: inherit;
+//     }
+
+// height: 50px;
+// border: none;
+//     background: inherit;
+//     
+//     // width: 16px;
+//     // height: 16px;
+//     // background: #D9D9D9;
+//     // border-radius: 50%;
+//     // text-align: center;
+// }
+
+.select__text {
+    @include font(normal, 400, 20px, 40px, #717171);
+}
+
+.select__title {
+    position: relative;
     padding: 5px 17.5px 5px 20px;
+    padding-right: 17.5px;
     width: 450px;
     height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: none;
+    align-items: center;
+    background: #D6E7D2;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     // margin-left: 372px;
     @include media-tablet {
         margin-bottom: 250px;
         width: 100%;
     }
+
     @include media-mobile {
         width: 100%;
         margin-bottom: 132px;
@@ -80,16 +127,97 @@
 
 }
 
-.contacts__text {
-    @include font(normal, 400, 20px, 40px, #717171);
-}
 
-.contacts__select {
-    background: inherit;
+.select__button {
     width: 16px;
     height: 16px;
     border: none;
-    background: #D9D9D9;
     border-radius: 50%;
     text-align: center;
+    // font-size: 10px;
+    background: url("../../img/contacts/buttonDown.svg");
+}
+
+
+//------select-active--------------------
+
+.title__active {
+    background: #C1E698;
+    box-shadow: none;
+}
+
+.button__active {
+    background: url("../../img/contacts/buttonUp.svg");
+}
+
+
+.container__active {
+    display: block;
+    padding: 27px 50px 31px 20px;
+    background: #DCE9D9;
+    @include font (normal, 400, 16px, 40px, #499A18);
+}
+
+.option {
+    border-bottom: solid 1px #D9D9D9;
+
+    &:hover {
+        color: $color-text7;
+        border-bottom: solid 1px $color-text7;
+    }
+}
+
+//------------------CARD-CITY---------------------------
+.cardCity {
+    display: block;
+    border: 1px solid #000000;
+    border-radius: 20px;
+    padding: 17px 76px 32px 33px;
+    margin-top: 47px;
+
+    &__text {
+        display: grid;
+        grid-template-columns: 128px 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        @include font (normal, 400, 16px, 40px, $color-dark);
+        margin-bottom: 24px;
+
+        .canandaigua {
+            display: none;
+            color: $color-text7;
+        }
+
+        .newYorkCity {
+            display: none;
+            color: $color-text7;
+        }
+
+        .yonkers {
+            display: none;
+            color: $color-text7;
+        }
+
+        .sherrill {
+            display: none;
+            color: $color-text7;
+        }
+
+    }
+
+    &__button {
+        display: flex;
+        justify-content: center;
+
+        .buttonCardCity {
+            padding: 7px 49px;
+            @include font (normal, 700, 10px, 13px, #717171);
+            border: 1px solid #E06733;
+            border-radius: 5px;
+
+            a {
+                text-decoration: none;
+                @include font (normal, 700, 10px, 13px, #717171);
+            }
+        }
+    }
 }
