--- a/sass/style.css
+++ b/sass/style.css
@@ -437,7 +437,15 @@ p {
   color: #E06733;
 }
 
-.none {
+.none-prise {
+  display: none;
+}
+
+.none-contacts {
+  display: none;
+}
+
+.none-cards {
   display: none;
 }
 
@@ -1317,33 +1325,11 @@ p {
 }
 
 .form__select {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  align-items: center;
-  background: #D6E7D2;
-  padding: 5px 17.5px 5px 20px;
-  width: 450px;
-  height: 50px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-@media (max-width: 768px) {
-  .form__select {
-    margin-bottom: 250px;
-    width: 100%;
-  }
-}
-@media (max-width: 380px) {
-  .form__select {
-    width: 100%;
-    margin-bottom: 132px;
-  }
-}
-.form__select:hover {
-  background: #C1E698;
+  flex-direction: column;
 }
 
-.contacts__text {
+.select__text {
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -1351,14 +1337,128 @@ p {
   color: #717171;
 }
 
-.contacts__select {
-  background: inherit;
+.select__title {
+  position: relative;
+  padding: 5px 17.5px 5px 20px;
+  padding-right: 17.5px;
+  width: 450px;
+  height: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: none;
+  align-items: center;
+  background: #D6E7D2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .select__title {
+    margin-bottom: 250px;
+    width: 100%;
+  }
+}
+@media (max-width: 380px) {
+  .select__title {
+    width: 100%;
+    margin-bottom: 132px;
+  }
+}
+.select__title:hover {
+  background: #C1E698;
+}
+
+.select__button {
   width: 16px;
   height: 16px;
   border: none;
-  background: #D9D9D9;
   border-radius: 50%;
   text-align: center;
+  background: url("../../img/contacts/buttonDown.svg");
+}
+
+.title__active {
+  background: #C1E698;
+  box-shadow: none;
+}
+
+.button__active {
+  background: url("../../img/contacts/buttonUp.svg");
+}
+
+.container__active {
+  display: block;
+  padding: 27px 50px 31px 20px;
+  background: #DCE9D9;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  color: #499A18;
+}
+
+.option {
+  border-bottom: solid 1px #D9D9D9;
+}
+.option:hover {
+  color: #717171;
+  border-bottom: solid 1px #717171;
+}
+
+.cardCity {
+  display: block;
+  border: 1px solid #000000;
+  border-radius: 20px;
+  padding: 17px 76px 32px 33px;
+  margin-top: 47px;
+}
+.cardCity__text {
+  display: grid;
+  grid-template-columns: 128px 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  color: #000000;
+  margin-bottom: 24px;
+}
+.cardCity__text .canandaigua {
+  display: none;
+  color: #717171;
+}
+.cardCity__text .newYorkCity {
+  display: none;
+  color: #717171;
+}
+.cardCity__text .yonkers {
+  display: none;
+  color: #717171;
+}
+.cardCity__text .sherrill {
+  display: none;
+  color: #717171;
+}
+.cardCity__button {
+  display: flex;
+  justify-content: center;
+}
+.cardCity__button .buttonCardCity {
+  padding: 7px 49px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 13px;
+  color: #717171;
+  border: 1px solid #E06733;
+  border-radius: 5px;
+}
+.cardCity__button .buttonCardCity a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 13px;
+  color: #717171;
 }
 
 .footer {
@@ -1436,6 +1536,10 @@ p {
 
 .blur {
   filter: blur(3px);
+}
+
+.displayBlock {
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
