feat: correct buttons-img and functions

--- a/sass/layouts/_contacts.scss
+++ b/sass/layouts/_contacts.scss
@@ -135,7 +135,7 @@
     border-radius: 50%;
     text-align: center;
     // font-size: 10px;
-    background: url("../../img/contacts/buttonDown.svg");
+    background: url("../img/contacts/buttonDown.svg");
 }
 
 
@@ -147,7 +147,7 @@
 }
 
 .button__active {
-    background: url("../../img/contacts/buttonUp.svg");
+    background: url("../img/contacts/buttonUp.svg");
 }
 
 
