--- a/sass/layouts/_prices.scss
+++ b/sass/layouts/_prices.scss
@@ -142,11 +142,11 @@
     border-radius: 50%;
     text-align: center;
     // font-size: 10px;
-    background: url("../../img/prices/buttonPriseBottom.svg");
+    background: url("../img/prices/buttonPriseBottom.svg");
 }
 
 .active_tariff {
-    background: url("../../img/prices/buttonPriseUp.svg");
+    background: url("../img/prices/buttonPriseUp.svg");
 }
 
 .tariff__text {
