--- a/sass/layouts/_contacts.scss
+++ b/sass/layouts/_contacts.scss
@@ -53,44 +53,34 @@
     @include media-tablet {
         width: 200px;
         position: static;
+        margin-top: 250px;
     }
 
     @include media-mobile {
         width: 100px;
+        margin-top: 132px;
     }
 }
 
 //-----SELECT----------------------------------
+
+form {
+    width: 450px;
+
+    @include media-mobile {
+        width: 300px;
+    }
+}
+
 .form__select {
     display: flex;
     flex-direction: column;
+
+    @include media-tablet {
+        width: 100%;
+    }
+
 }
-
-// .contacts__select {
-//     padding: 5px 17.5px 5px 20px;
-//     border: none;
-//     border-color: inherit;
-//     background: inherit;
-//     // appearance: none;
-//     // -webkit-appearance: none;
-//     color: $color-text7;
-//     width: 100%;
-//     outline: none;
-
-//     &:hover {
-//         background: inherit;
-//     }
-
-// height: 50px;
-// border: none;
-//     background: inherit;
-//     
-//     // width: 16px;
-//     // height: 16px;
-//     // background: #D9D9D9;
-//     // border-radius: 50%;
-//     // text-align: center;
-// }
 
 .select__text {
     @include font(normal, 400, 20px, 40px, #717171);
@@ -108,17 +98,17 @@
     background: #D6E7D2;
     display: flex;
     justify-content: space-between;
+    align-self: flex-end;
     align-items: center;
-
     // margin-left: 372px;
+
     @include media-tablet {
-        margin-bottom: 250px;
         width: 100%;
     }
 
     @include media-mobile {
         width: 100%;
-        margin-bottom: 132px;
+      
     }
 
     &:hover {
@@ -144,6 +134,11 @@
 .title__active {
     background: #C1E698;
     box-shadow: none;
+
+    @include media-tablet {
+        margin-bottom: 0px;
+    }
+
 }
 
 .button__active {
@@ -156,6 +151,12 @@
     padding: 27px 50px 31px 20px;
     background: #DCE9D9;
     @include font (normal, 400, 16px, 40px, #499A18);
+    // width: 450px;
+    // align-self: flex-end;
+
+    @include media-tablet {
+        margin-bottom: 14px;
+    }
 }
 
 .option {
@@ -175,6 +176,10 @@
     padding: 17px 76px 32px 33px;
     margin-top: 47px;
 
+    @include media-mobile {
+        padding: 23px 36px;
+    }
+
     &__text {
         display: grid;
         grid-template-columns: 128px 1fr;
@@ -182,9 +187,17 @@
         @include font (normal, 400, 16px, 40px, $color-dark);
         margin-bottom: 24px;
 
+        @include media-mobile {
+            grid-template-columns: 65px 1fr;
+            line-height: 20px;
+        }
+
         .canandaigua {
             display: none;
             color: $color-text7;
+            @include media-mobile {
+            //     line-height: 0;
+            }
         }
 
         .newYorkCity {
