--- a/sass/style.css
+++ b/sass/style.css
@@ -1479,17 +1479,17 @@ form {
   justify-content: center;
 }
 .cardCity__button .buttonCardCity {
-  padding: 7px 49px;
   font-style: normal;
   font-weight: 700;
   font-size: 10px;
   line-height: 13px;
   color: #717171;
-  border: 1px solid #E06733;
-  border-radius: 5px;
+  border: none;
 }
 .cardCity__button .buttonCardCity a {
-  text-decoration: none;
+  border: 1px solid #E06733;
+  border-radius: 5px;
+  padding: 7px 49px;
   font-style: normal;
   font-weight: 700;
   font-size: 10px;
